# DeepText

./: .gitignore  LICENSE  README.md  activation.py  config.py  dataset.py  deep.py  example.py  feed.py  main.py  model.py  pyproject.toml  train.py  utils.py
docs/: #0000.md
examples/: README.md  fish-dataset.py  get-device.py  model-size.py  ram-usage.py  retrieval-url.py
src/: attention.py  block.py  config.py  main.py  model.py  norm.py  train.py
